basic structure with stanbol